--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
 body{
-    background-image: url(images/triangular/triangular.png);
+    background: #f9e4f8;
+    margin:0;
+}
+header { 
+    background-color: black;
+    color: white;
+    padding-bottom: 20px;
+    padding-top: 20px
+}
+header li{
+    text-decoration: none; 
+    display: inline-block; 
+    width: 24%;
+    text-align: center;
+}
+header a {
+    color: white;
+    text-decoration: none;
+}
+footer{
+  background-color: black; 
+    text-align: center; 
+}
+
+footer li {
+    display: inline-block;
+    margin-left:40px;
+    margin-right:40px;
 }
