--- a/style.css
+++ b/style.css
@@ -51,3 +51,18 @@ h1{
 main img{
     border-radius:20px;
 }
+
+.text-image{
+    position:relative;
+    bottom:50px;
+}
+
+.text-image{
+    position: relative;
+    bottom: 50px;
+}
+
+.texte-image{
+    position: relative;
+    bottom: 50px;
+}
